# RSink

./: .gitignore  Cargo.toml  README.md  config.example.json  config.example.toml  install.sh  rsink.conf.example
.github/workflows/: ci.yml  release.yaml
src/: cache.rs  config.rs  main.rs  util.rs
src/backends/: interface.rs  mod.rs
src/backends/s3/: s3.rs
src/cloud/: adapter.rs  mod.rs
src/cloud/adapters/: s3.rs
src/cloud/providers/: mod.rs  s3.rs
src/util/: cache.rs  common.rs  config.rs  mod.rs
