[package]
name = "rsink"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.62"
dirs = "4.0.0"
lazy_static = "1.4.0"
notify = "5.0.0"
rust-s3 = { version = "0.32.3", default-features = false, features = ["tokio-rustls-tls"] }
online = { git = "https://github.com/abdulrahman1s/online", branch = "tokio", default-features = false, features = ["tokio-runtime"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = "1.0.144"
figment = { version = "0.10.6", features = ["toml", "json", "env"] }
serde_json = "1.0.85"
dashmap = "5.4.0"
notify-rust = "4.5.8"
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.24"
async-trait = "0.1.57"
time = "0.3.14"

[profile.release]
codegen-units = 1
strip = true
