[package]
name = "rsink"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
dashmap = "5.4.0"
dirs = "4.0.0"
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["toml"] }
futures = "0.3.24"
lazy_static = "1.4.0"
log = "0.4.17"
notify = "5.0.0"
notify-rust = "4.5.8"
rust-s3 = { version = "0.32.3", default-features = false, features = ["tokio-rustls-tls"] }
serde = "1.0.144"
serde_json = "1.0.85"
time = "0.3.14"
tokio = { version = "1.21.0", features = ["full"] }

[dependencies.online]
git = "https://github.com/jesusprubio/online"
rev = "1ba43a7f97afa9683d474a6baf2f2263bdf23a43"
default-features = false
features = ["tokio-runtime"]

[profile.release]
codegen-units = 1
strip = true
